hyxf_devops/k8s/statefulset/nfs/apollo-k8s-dev1.yml
apiVersion: v1
kind: List
items:
- kind: Service
  apiVersion: v1
  metadata:
    labels:
      app: apollo-m
    name: apollo-svc
    namespace: k8s-dev1
  spec:
    type: NodePort
    ports:
    - name: config-port
      port: 8080
      targetPort: 8080
    - name: admin-port
      port: 8090
      targetPort: 8090
    selector:
      app: apollo-m

- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: apollo-m
    name: apollo
    namespace: k8s-dev1
  spec:
    replicas: 1
    revisionHistoryLimit: 5
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
    selector:
      matchLabels:
        app: apollo-m
    template:
      metadata:
        labels:
          app: apollo-m
      spec:
        terminationGracePeriodSeconds: 60
        containers:
        - name: apollo-m
          image: docker.51xf.cn/k8s/apollo:1.3.0
          imagePullPolicy: IfNotPresent
          ports:
          - name: config-port
            containerPort: 8080
          - name: admin-port
            containerPort: 8090
          readinessProbe:
            httpGet:
              path: /
              port: config-port
            # 启动较慢,可以适量改大,如果同时要开启admin,或者同时开启其他环境服务,比如uat或pro,则设置的预备时间值翻倍
            initialDelaySeconds: 80
            periodSeconds: 40
            timeoutSeconds: 6
          livenessProbe:
            # 同预备时间相似,但如果要同时启动admin或启动多个环境的服务,则等待时长必须要大于全部服务启动完的时长
            # 因为一旦没能启动完成,则健康检查失败将会陷入无限重启的状态
            # 如果只有一个环境并设置了ONLY_CONFIG,则健康检查可以替换为httpGet方式.
            initialDelaySeconds: 100
            periodSeconds: 20
            exec:
              command:
              - healthcheck
