hyxf_devops/k8s/statefulset/nfs/apollo-portal-k8s-dev1.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: apollo-portal-cm
    namespace: k8s-dev1
  data:
    application-ldap.yml: |
      spring:
        ldap:
          base: "dc=51xf,dc=cn"
          username: "cn=root,dc=51xf,dc=cn"
          password: "ilanni"
          searchFilter: "(uid={0})"
          urls:
          - "ldap://ldap.51xf.cn:389"
      
      ldap:
        mapping:
          objectClass: "inetOrgPerson"
          loginId: "uid"
          rdnKey: "uid" 
          userDisplayName: "cn"
          email: "mail"

- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: apollo-portal-dm
    name: apollo-portal-svc
    namespace: k8s-dev1
  spec:
    type: NodePort
    ports:
    - name: portal-port
      port: 8070
      targetPort: 8070
    # 如无必要,可以不暴露portal中的admin和config
    #- name: admin-port
    #- name: config-port
    selector:
      app: apollo-portal-dm

- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: apollo-portal-dm
    name: apollo-portal
    namespace: k8s-dev1
  spec:
    replicas: 1
    revisionHistoryLimit: 5
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
    selector:
      matchLabels:
        app: apollo-portal-dm
    template:
      metadata:
        labels:
          app: apollo-portal-dm
      spec:
        containers:
        - name: apollo-portal
          image: docker.51xf.cn/k8s/apollo:1.3.0
          imagePullPolicy: IfNotPresent
#          volumeMounts:
#          - mountPath: /apollo-portal/config/
#            readOnly: true
#            name: application-ldap
          ports:
          - name: portal-port
            containerPort: 8070
          # 如无必要,可以不暴露portal中的admin和config
          #- name: config-port
          #  containerPort: 8080
          #- name: admin-port
          #  containerPort: 8090
          readinessProbe:
            initialDelaySeconds: 200
            periodSeconds: 20
            exec:
              command:
              - healthcheck
          livenessProbe:
            initialDelaySeconds: 300
            periodSeconds: 10
            exec:
              command:
              - healthcheck
        volumes:
        - name: application-ldap
          configMap:
            name: apollo-portal-cm
            items:
              - key: application-ldap.yml
                path: application-ldap.yml
