hyxf_devops/k8s/statefulset/nfs/mongodb-nfs.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: mongo-k8s-dev1-c0
  spec:
    capacity:
      storage: 1Gi
    accessModes:
      - ReadWriteOnce
    persistentVolumeReclaimPolicy: Retain
    storageClassName: "mongo-k8s-dev1"
    nfs:
      path: /k8s/k8s-dev1/mongo/cluster/mongo0
      server: 192.192.0.79

- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: mongo-cm
    namespace: k8s-dev1
  data:
    mongo.conf: |
      [...]
- apiVersion: v1
  kind: Service
  metadata:
    name: mongo-svc
    namespace: k8s-dev1
  spec:
    clusterIP: None
    ports:
    - port: 27017
      targetPort: 27017
    selector:
      app: mongo-dm

- apiVersion: apps/v1beta1
  kind: StatefulSet
  metadata:
    name: mongo-sts
    namespace: k8s-dev1
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: mongo-dm
    serviceName: mongo-svc
    template:
      metadata:
        labels:
          app: mongo-dm
          version: v-51xf_number
      spec:
        terminationGracePeriodSeconds: 10
        containers:
        - name: mongo
          image: docker.51xf.cn/mongo/mongo
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
#          lifecycle:
#            postStart:
#              exec:
#                command:
#                - /bin/sh
#                - -c
#                - >
#                  if [ ! -f /data/db/admin-user.lock ]; then
#                    mkdir -p /data/db/
#                    sleep 5;
#                    touch /data/db/admin-user.lock
#                    if [ "$HOSTNAME" = "mongo-sts-0" ]; then
#                      mongo --eval 'db = db.getSiblingDB("admin"); db.createUser({ user: "admin", pwd: "password", roles: [{ role: "root", db: "admin" }]});';
#                    fi;
#                  fi;
          command: 
            - "bash"
            - "-c"
            - "numactl mongod -f /etc/conf.d/mongo.conf"
          volumeMounts:
          - name: mongo-data
            mountPath: /var/lib/mongodb
          - name: mongo-config
            mountPath: /etc/conf.d
          - name: host-time
            mountPath: /etc/localtime
          ports:
          - containerPort: 27017
        volumes:
        - name: mongo-config
          configMap:
            name: mongo-cm
        - name: host-time
          hostPath:
            path: /etc/localtime
    volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes:
        - ReadWriteOnce
        storageClassName: "mongo-k8s-dev1"
        resources:
          requests:
            storage: 1Gi
