hyxf_devops/k8s/statefulset/nfs/mysql-superdiamond.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-m-svc
  namespace: kube-public
spec:
  ports:
  - name: mysql-m-port
    port: 3306
  clusterIP: None
  selector:
    app: mysql-m-dm
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mysql-m-sfs
  namespace: kube-public
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-m-dm
  serviceName: mysql-m-svc
  template:
    metadata:
      labels:
        app: mysql-m-dm
    spec:
      nodeSelector:
        mysqldata: mysqldata
      tolerations:
      - key: "nfs"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: mysql-master-pod
        image: docker.51xf.cn/mysql/mysql:5.7
        imagePullPolicy: Always
        args:
          - "--ignore-db-dir=lost+found"
        ports:
        - containerPort: 3306
          name: mysql-m-port
        volumeMounts:
        - name: mysql-cm
          mountPath: /etc/mysql/conf.d
        - mountPath: /var/lib/mysql
          name: superdiamond
          readOnly: false
      terminationGracePeriodSeconds: 30          
      volumes:
      - name: mysql-cm
        configMap:
          name: mysql-superdiamond-cm
          items:
            - key: mysql-master.cnf
              path: mysql-master.cnf
  volumeClaimTemplates:
  - metadata:
      name: superdiamond
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: superdiamond-cluster
      resources:
        requests:
          storage: 20Gi
