hyxf_devops/k8s/statefulset/nfs/redis-sentinel-nfs.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: redis-k8s-dev1-s0
  spec:
    capacity:
      storage: 1Gi
    accessModes:
      - ReadWriteOnce
    persistentVolumeReclaimPolicy: Retain
    storageClassName: "redis-sentinel-k8s-dev1"
    nfs:
      path: /k8s/k8s-dev1/redis/sentinel/redis0
      server: 192.192.0.79

- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: redis-k8s-dev1-s1
  spec:
    capacity:
      storage: 1Gi
    accessModes:
      - ReadWriteOnce
    persistentVolumeReclaimPolicy: Retain
    storageClassName: "redis-sentinel-k8s-dev1"
    nfs:
      path: /k8s/k8s-dev1/redis/sentinel/redis1
      server: 192.192.0.79

- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: redis-sentinel
    namespace: k8s-dev1

- kind: Role
  apiVersion: rbac.authorization.k8s.io/v1beta1
  metadata:
    name: redis-sentinel
    namespace: k8s-dev1
  rules:
    - apiGroups:
        - ""
      resources:
        - endpoints
      verbs:
        - get

- kind: RoleBinding
  apiVersion: rbac.authorization.k8s.io/v1beta1
  metadata:
    name: redis-sentinel
    namespace: k8s-dev1
  subjects:
  - kind: ServiceAccount
    name: redis-sentinel
    namespace: k8s-dev1
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: redis-sentinel

- kind: ConfigMap
  apiVersion: v1
  metadata:
    name: redis-cm
    namespace: k8s-dev1
    labels:
      addonmanager.kubernetes.io/mode: Reconcile
  data:
      redis-master.conf: |
        [...]
      redis-slave.conf: |
        [...]
      redis-sentinel.conf: |
        port 26379
        dir /data
        sentinel monitor mymaster redis-master-sts-0.redis-master-svc 6379 2
        sentinel down-after-milliseconds mymaster 30000
        sentinel parallel-syncs mymaster 1
        sentinel failover-timeout mymaster 180000
        sentinel auth-pass mymaster 123qwe

- apiVersion: v1
  kind: Service
  metadata:
    name: redis-master-svc
    namespace: k8s-dev1
  spec:
    clusterIP: None
    ports:
    - name: redis
      port: 6379
      targetPort: 6379
    selector:
      app: redis-master-dm

- apiVersion: apps/v1beta1
  kind: StatefulSet
  metadata:
    name: redis-master-sts
    namespace: k8s-dev1
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: redis-master-dm
    serviceName: redis-master-svc
    template:
      metadata:
        labels:
          app: redis-master-dm
      spec:
        containers:
        - name: redis-master-pod
          image: docker.51xf.cn/redis/redis:3.2
          imagePullPolicy: IfNotPresent
          command:
            - "redis-server"
          args:
            - "/tmp/redis-master.conf"
            - "--protected-mode"
            - "no"
          ports:
          - containerPort: 6379
            name: maste-rport
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
          - mountPath: /tmp/
            name: redis-config
            readOnly: false
          - mountPath: /data/
            name: storage
            readOnly: false
        serviceAccountName: redis-sentinel
        terminationGracePeriodSeconds: 30
        volumes:
        - name: redis-config
          configMap:
            name: redis-cm
            items:
              - key: redis-master.conf
                path: redis-master.conf
    volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
        - ReadWriteOnce
        storageClassName: "redis-sentinel-k8s-dev1"
        resources:
          requests:
            storage: 1Gi

- apiVersion: v1
  kind: Service
  metadata:
    name: redis-slave-svc
    namespace: k8s-dev1
  spec:
    clusterIP: None
    ports:
    - name: redis
      port: 6379
      targetPort: 6379
    selector:
      app: redis-slave-dm

- apiVersion: apps/v1beta1
  kind: StatefulSet
  metadata:
    name: redis-slave-sts
    namespace: k8s-dev1
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: redis-slave-dm
    serviceName: redis-slave-svc
    template:
      metadata:
        labels:
          app: redis-slave-dm
      spec:
        containers:
        - name: redis-slave-pod
          image: docker.51xf.cn/redis/redis:3.2
          imagePullPolicy: IfNotPresent
          command:
            - "redis-server"
          args:
            - "/tmp/redis-slave.conf"
            - "--protected-mode"
            - "no"
          ports:
          - containerPort: 6379
            name: slave-port
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
          - mountPath: /tmp/
            name: redis-config
            readOnly: false
          - mountPath: /data/
            name: storage
            readOnly: false
        serviceAccountName: redis-sentinel
        terminationGracePeriodSeconds: 30
        volumes:
        - name: redis-config
          configMap:
            name: redis-cm
            items:
              - key: redis-slave.conf
                path: redis-slave.conf
    volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
        - ReadWriteOnce
        storageClassName: "redis-sentinel-k8s-dev1"
        resources:
          requests:
            storage: 1Gi

- kind: Service
  apiVersion: v1
  metadata:
    name: redis-sentinel-svc
    namespace: k8s-dev1
  spec:
    clusterIP: None
    ports:
    - name: redis
      port: 26379
      targetPort: 26379
    selector:
      app: redis-sentinel-dm

- kind: StatefulSet
  apiVersion: apps/v1beta1
  metadata:
    name: redis-sentinel-sts
    namespace: k8s-dev1
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: redis-sentinel-dm
    serviceName: redis-sentinel-svc
    template:
      metadata:
        labels:
          app: redis-sentinel-dm
      spec:
        containers:
        - name: redis-sentinel-pod
          image: docker.51xf.cn/redis/redis:3.2
          imagePullPolicy: IfNotPresent
          command:
          - sh          
          args:
          - -c
          - cp /tmp/redis-sentinel.conf /data/; redis-sentinel /data/redis-sentinel.conf
          ports:
          - containerPort: 26379
            name: sentinel-port
            protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
          - mountPath: /tmp/
            name: redis-config
            readOnly: false
        serviceAccountName: redis-sentinel
        terminationGracePeriodSeconds: 30
        volumes:
        - name: redis-config
          configMap:
            name: redis-cm
            items:
              - key: redis-sentinel.conf
                path: redis-sentinel.conf
