hyxf_devops/k8s/statefulset/nfs/rocketmq-nfs-ng.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: rocketmq-ng-svc
    namespace: k8s-dev1
  spec:
    type: NodePort
    ports:
    - name: http-9595
      port: 9595
      targetPort: 9595
    selector:
      app: rocketmq-ng-dm     
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: rocketmq-ng
    namespace: k8s-dev1
  spec:
    selector:
      matchLabels:
        app: rocketmq-ng-dm
    replicas: 1
    revisionHistoryLimit: 5
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
    template:
      metadata:
        labels:
          app: rocketmq-ng-dm
          version: v-51xf_number
      spec:
        terminationGracePeriodSeconds: 60
        containers:
        - name: rocketmq-console-ng
          image: docker.51xf.cn/rocketmq/rocketmq-console-ng:3.2.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9595
          resources:
            limits:
              cpu: 2
              memory: 2.5Gi
            requests:
              cpu: 500m
              memory: 1Gi
