hyxf_devops/k8s/statefulset/nfs/rocketmq-nfs.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: rocketmq-b-k8s-dev1-0
  spec:
    capacity:
      storage: 5Gi
    accessModes:
      - ReadWriteOnce
    persistentVolumeReclaimPolicy: Retain
    storageClassName: rocketmq-broker-k8s-dev1
    nfs:
      path: /k8s/k8s-dev1/rocketmq/broker/0/
      server: 192.192.0.79

- apiVersion: v1
  kind: PersistentVolume
  metadata:
    name: rocketmq-n-k8s-dev1-0
  spec:
    capacity:
      storage: 5Gi
    accessModes:
      - ReadWriteOnce
    persistentVolumeReclaimPolicy: Retain
    storageClassName: rocketmq-namesrv-k8s-dev1
    nfs:
      path: /k8s/k8s-dev1/rocketmq/namesrv/0/
      server: 192.192.0.79

- apiVersion: v1
  kind: Service
  metadata:
    name: rocketmq-svc
    namespace: k8s-dev1
  spec:
    type: NodePort
    ports:
    - name: http-9876
      port: 9876
      targetPort: 9876
    - name: http-10911
      port: 10911
      targetPort: 10911
    - name: http-10912
      port: 10912
      targetPort: 10912
    selector:
      app: rocketmq-dm

- apiVersion: apps/v1beta1
  kind: StatefulSet
  metadata:
    name: rocketmq-dy
    namespace: k8s-dev1
  spec:
    serviceName: rocketmq-svc
    replicas: 1
    template:
      metadata:
       labels:
         app: rocketmq-dm
      spec:
        containers:
        - name: broker
          image: docker.51xf.cn/rocketmq/rocketmq-broker:3.2.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 10911
            - containerPort: 10912
          resources:
            limits:
              cpu: 2
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /opt/alibaba-rocketmq/store/broker
              name: broker-store
        - name: namesrv
          image: docker.51xf.cn/rocketmq/rocketmq-namesrv:3.2.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9876
          resources:
            limits:
              cpu: 2
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /opt/alibaba-rocketmq/store/namesrv
              name: namesrv-store
    volumeClaimTemplates:
      - metadata:
          name: broker-store
        spec:
          accessModes:
            - ReadWriteOnce
          storageClassName: rocketmq-broker-k8s-dev1
          resources:
            requests:
              storage: 5Gi
      - metadata:
          name: namesrv-store
        spec:
          accessModes:
            - ReadWriteOnce
          storageClassName: rocketmq-namesrv-k8s-dev1
          resources:
            requests:
              storage: 5Gi
